# gachaterm

./: CMakeLists.txt  Doxyfile  README.md
docs/: CNAME  mainpage.md  shader_lang.md
docs/html/: annotated.html  annotated_dup.js  canvas_8c.html  canvas_8c.js  canvas_8h.html  canvas_8h.js  canvas_8h_source.html  classes.html  dir_0a4b4be470ccb3aa51643a03ee90aa9a.html  dir_0a4b4be470ccb3aa51643a03ee90aa9a.js  dir_1243271318b2b38807a3b1d2ca08dd72.html  dir_1243271318b2b38807a3b1d2ca08dd72.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  functions.html  functions_vars.html  gachashade_8h.html  gachashade_8h.js  gachashade_8h_source.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  index.js  main_8c.html  main_8c.js  mainpage_8md.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  plasma_8c.html  plasma_8c.js  print_8c.html  (+17 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_5.js  files_1.js  files_3.js  files_4.js  (+29 more)
src/: main.c
src/rendering/: canvas.c  canvas.h  print.c  print.h
src/shaders/: gachashade.h  plasma.c
